--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@vscode/sqlite3": "5.0.7",
     "express": "^4.17.3",
-    "knex": "^1.0.3"
+    "knex": "^0.95.15",
+    "sqlite3": "^5.0.2"
   },
   "repository": {
     "type": "git",
